haskell/Guestfs.hs


foreign import ccall unsafe "guestfs.h guestfs_add_cdrom" c_add_cdrom
  :: GuestfsP -> CString -> IO CInt

add_cdrom :: GuestfsH -> String -> IO ()
add_cdrom h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_add_cdrom p filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_add_drive_ro" c_add_drive_ro
  :: GuestfsP -> CString -> IO CInt

add_drive_ro :: GuestfsH -> String -> IO ()
add_drive_ro h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_add_drive_ro p filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_add_drive_ro_with_if" c_add_drive_ro_with_if
  :: GuestfsP -> CString -> CString -> IO CInt

add_drive_ro_with_if :: GuestfsH -> String -> String -> IO ()
add_drive_ro_with_if h filename iface = do
  r <- withCString filename $ \filename -> withCString iface $ \iface -> withForeignPtr h (\p -> c_add_drive_ro_with_if p filename iface)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_add_drive_with_if" c_add_drive_with_if
  :: GuestfsP -> CString -> CString -> IO CInt

add_drive_with_if :: GuestfsH -> String -> String -> IO ()
add_drive_with_if h filename iface = do
  r <- withCString filename $ \filename -> withCString iface $ \iface -> withForeignPtr h (\p -> c_add_drive_with_if p filename iface)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_clear" c_aug_clear
  :: GuestfsP -> CString -> IO CInt

aug_clear :: GuestfsH -> String -> IO ()
aug_clear h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_clear p augpath)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_close" c_aug_close
  :: GuestfsP -> IO CInt

aug_close :: GuestfsH -> IO ()
aug_close h = do
  r <- withForeignPtr h (\p -> c_aug_close p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_defvar" c_aug_defvar
  :: GuestfsP -> CString -> CString -> IO CInt

aug_defvar :: GuestfsH -> String -> Maybe String -> IO Int
aug_defvar h name expr = do
  r <- withCString name $ \name -> maybeWith withCString expr $ \expr -> withForeignPtr h (\p -> c_aug_defvar p name expr)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_aug_get" c_aug_get
  :: GuestfsP -> CString -> IO CString

aug_get :: GuestfsH -> String -> IO String
aug_get h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_get p augpath)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_aug_init" c_aug_init
  :: GuestfsP -> CString -> CInt -> IO CInt

aug_init :: GuestfsH -> String -> Int -> IO ()
aug_init h root flags = do
  r <- withCString root $ \root -> withForeignPtr h (\p -> c_aug_init p root (fromIntegral flags))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_insert" c_aug_insert
  :: GuestfsP -> CString -> CString -> CInt -> IO CInt

aug_insert :: GuestfsH -> String -> String -> Bool -> IO ()
aug_insert h augpath label before = do
  r <- withCString augpath $ \augpath -> withCString label $ \label -> withForeignPtr h (\p -> c_aug_insert p augpath label (fromBool before))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_label" c_aug_label
  :: GuestfsP -> CString -> IO CString

aug_label :: GuestfsH -> String -> IO String
aug_label h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_label p augpath)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_aug_load" c_aug_load
  :: GuestfsP -> IO CInt

aug_load :: GuestfsH -> IO ()
aug_load h = do
  r <- withForeignPtr h (\p -> c_aug_load p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_ls" c_aug_ls
  :: GuestfsP -> CString -> IO (Ptr CString)

aug_ls :: GuestfsH -> String -> IO [String]
aug_ls h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_ls p augpath)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_aug_match" c_aug_match
  :: GuestfsP -> CString -> IO (Ptr CString)

aug_match :: GuestfsH -> String -> IO [String]
aug_match h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_match p augpath)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_aug_mv" c_aug_mv
  :: GuestfsP -> CString -> CString -> IO CInt

aug_mv :: GuestfsH -> String -> String -> IO ()
aug_mv h src dest = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_aug_mv p src dest)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_rm" c_aug_rm
  :: GuestfsP -> CString -> IO CInt

aug_rm :: GuestfsH -> String -> IO Int
aug_rm h augpath = do
  r <- withCString augpath $ \augpath -> withForeignPtr h (\p -> c_aug_rm p augpath)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_aug_save" c_aug_save
  :: GuestfsP -> IO CInt

aug_save :: GuestfsH -> IO ()
aug_save h = do
  r <- withForeignPtr h (\p -> c_aug_save p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_set" c_aug_set
  :: GuestfsP -> CString -> CString -> IO CInt

aug_set :: GuestfsH -> String -> String -> IO ()
aug_set h augpath val = do
  r <- withCString augpath $ \augpath -> withCString val $ \val -> withForeignPtr h (\p -> c_aug_set p augpath val)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_aug_setm" c_aug_setm
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

aug_setm :: GuestfsH -> String -> Maybe String -> String -> IO Int
aug_setm h base sub val = do
  r <- withCString base $ \base -> maybeWith withCString sub $ \sub -> withCString val $ \val -> withForeignPtr h (\p -> c_aug_setm p base sub val)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_available" c_available
  :: GuestfsP -> Ptr CString -> IO CInt

available :: GuestfsH -> [String] -> IO ()
available h groups = do
  r <- withMany withCString groups $ \groups -> withArray0 nullPtr groups $ \groups -> withForeignPtr h (\p -> c_available p groups)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_available_all_groups" c_available_all_groups
  :: GuestfsP -> IO (Ptr CString)

available_all_groups :: GuestfsH -> IO [String]
available_all_groups h = do
  r <- withForeignPtr h (\p -> c_available_all_groups p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_base64_in" c_base64_in
  :: GuestfsP -> CString -> CString -> IO CInt

base64_in :: GuestfsH -> String -> String -> IO ()
base64_in h base64file filename = do
  r <- withCString base64file $ \base64file -> withCString filename $ \filename -> withForeignPtr h (\p -> c_base64_in p base64file filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_base64_out" c_base64_out
  :: GuestfsP -> CString -> CString -> IO CInt

base64_out :: GuestfsH -> String -> String -> IO ()
base64_out h filename base64file = do
  r <- withCString filename $ \filename -> withCString base64file $ \base64file -> withForeignPtr h (\p -> c_base64_out p filename base64file)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blkdiscard" c_blkdiscard
  :: GuestfsP -> CString -> IO CInt

blkdiscard :: GuestfsH -> String -> IO ()
blkdiscard h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blkdiscard p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blkdiscardzeroes" c_blkdiscardzeroes
  :: GuestfsP -> CString -> IO CInt

blkdiscardzeroes :: GuestfsH -> String -> IO Bool
blkdiscardzeroes h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blkdiscardzeroes p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_blkid" c_blkid
  :: GuestfsP -> CString -> IO (Ptr CString)

blkid :: GuestfsH -> String -> IO [(String, String)]
blkid h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blkid p device)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else do
      arr <- peekArray0 nullPtr r
      arr <- mapM peekCString arr
      return (assocListOfHashtable arr)

foreign import ccall unsafe "guestfs.h guestfs_blockdev_flushbufs" c_blockdev_flushbufs
  :: GuestfsP -> CString -> IO CInt

blockdev_flushbufs :: GuestfsH -> String -> IO ()
blockdev_flushbufs h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_flushbufs p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blockdev_getbsz" c_blockdev_getbsz
  :: GuestfsP -> CString -> IO CInt

blockdev_getbsz :: GuestfsH -> String -> IO Int
blockdev_getbsz h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_getbsz p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_blockdev_getro" c_blockdev_getro
  :: GuestfsP -> CString -> IO CInt

blockdev_getro :: GuestfsH -> String -> IO Bool
blockdev_getro h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_getro p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_blockdev_getsize64" c_blockdev_getsize64
  :: GuestfsP -> CString -> IO Int64

blockdev_getsize64 :: GuestfsH -> String -> IO Int64
blockdev_getsize64 h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_getsize64 p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_blockdev_getss" c_blockdev_getss
  :: GuestfsP -> CString -> IO CInt

blockdev_getss :: GuestfsH -> String -> IO Int
blockdev_getss h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_getss p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)
